# loan_calculator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
loan_calculator/: data_store.py  interest_calculations.py  main.py
tests/: test_cli.py  test_data_store.py  test_interest_calculations.py
