[tool.poetry]
name = "loan-calculator"
version = "0.1.0"
description = "A command-line application to calculate loan payments."
authors = ["oseh <osemudiamed5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
typer = "^0.15.1"
cmd2 = "^2.5.7"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
flake8 = "^6.0.0"

[tool.poetry.scripts]
loan-calculator = "loan_calculator.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[virtualenvs]
create = true
in-project = true
